Clean up and replace URL in Set usage with URI to avoid DNS lookups in hash/equals